--- a/app/src/main/res/layout/activity_covid_case_data.xml
+++ b/app/src/main/res/layout/activity_covid_case_data.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cursorVisible="false"
-        android:text="@string/searchCountryButtonText"
+        android:text="Search"
         android:visibility="visible"/>
 
     <ProgressBar
@@ -46,6 +46,11 @@
         android:id="@+id/caseListView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
 
 
 
