Added 2nd help button in COVID_19_CASE_DATA.java and completed Project final

--- a/app/src/main/res/layout/activity_covid_case_data.xml
+++ b/app/src/main/res/layout/activity_covid_case_data.xml
@@ -71,6 +71,6 @@
         android:layout_weight="1"
         android:hint="Help"
         android:text="@string/help"
-        android:layout_below="@id/caseSearchCountryButton"/>
+        android:layout_below="@id/savedCountryButton"/>
 
 </RelativeLayout>
